[project]
name = "dusted"
version = "1.7.0"
description = "Dustforce replay editor"
authors = [ { name = "Alex Morson", email = "alexmorson@btinternet.com" } ]
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "dustmaker>=1.2.0",
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
]

[project.urls]
Source = "https://github.com/alexmorson/dusted"
Changelog = "https://github.com/alexmorson/dusted/releases"

[project.gui-scripts]
dusted = "dusted.__main__:main"

[build-system]
requires = [ "uv_build>=0.9.11,<0.10.0" ]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]
