[project]
name = "dusted"
version = "1.11.0"
description = "Dustforce replay editor"
authors = [ { name = "Alex Morson", email = "alexmorson@btinternet.com" } ]
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "dustmaker>=1.2.0",
    "platformdirs>=4.10.0",
    "requests>=2.34.2",
]

[project.urls]
Source = "https://github.com/alexmorson/dusted"
Changelog = "https://github.com/alexmorson/dusted/releases"

[project.gui-scripts]
dusted = "dusted.__main__:main"

[build-system]
requires = [ "uv_build>=0.11.19,<0.12" ]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]
