[metadata]
name = dusted
version = 1.0.1
url = https://github.com/AlexMorson/dustforce-tas-editor
author = Alex Morson
author_email = alexmorson@btinternet.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license_file = LICENSE.txt
description = Dustforce replay editor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
install_requires =
    requests
    dustmaker
packages =
    dusted
    dusted.dustforce
    dusted.geom
    dusted.replay

[options.package_data]
dusted = config.ini

[options.entry_points]
gui_scripts =
    dusted = dusted.__main__:main
