[metadata]
name = dusted
version = 1.2.0
url = https://github.com/AlexMorson/dusted
author = Alex Morson
author_email = alexmorson@btinternet.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license_file = LICENSE.txt
description = Dustforce replay editor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
install_requires =
    appdirs ~= 1.4.4
    dustmaker ~= 1.1.0
    requests ~= 2.22
packages =
    dusted
    dusted.dustforce
    dusted.geom

[options.entry_points]
gui_scripts =
    dusted = dusted.__main__:main
